overflow fixed

--- a/v2/src/components/Navbar/navbar.css
+++ b/v2/src/components/Navbar/navbar.css
@@ -1,10 +1,12 @@
-
+body{
+    background-image: url('../../assets/wave-top-left.svg'), url('../../assets/wave-top-right.svg');
+    background-size: 200rem 40rem , 180rem 30rem;
+    background-position: top left, top left;
+    background-repeat: no-repeat;
+}
 header{
     width: 100%;
-    background: transparent;
     transition:box-shadow 0.5s ease;
-    top:0; 
-    position:relative;
 }
 .shadow{
     box-shadow: 0px 0px 6px 1px black;
