--- a/v2/src/containers/HomeView/homepage.css
+++ b/v2/src/containers/HomeView/homepage.css
@@ -5,6 +5,10 @@
     justify-content:center;
     height: calc(100vh - 6rem);
     position: relative;
+    background-image: url('../../assets/wave-bottom-1.svg'), url('../../assets/wave-bottom-2.svg');
+    background-size:200rem 40rem,180rem 30rem;
+    background-position:bottom right,bottom right;
+    background-repeat: no-repeat;
 }
 .imageContainer{
     margin: 10px;
@@ -41,8 +45,9 @@
 .btn{
     display:flex;
     justify-content:center;
+    background: var(--secondaryColor);
     align-items:center;
-    color:var(--secondaryColor); 
+    color:#fff;
     font-size: 2.8rem;
     font-weight:bold ;
     text-decoration: none;
@@ -56,11 +61,7 @@
     outline: none;
     text-decoration: none;
 }
-.btn:hover{
-    background: var(--secondaryColor);
-    color:#fff;
 
-}
 .btn i {
     margin-left: 1rem;
 }
